--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ $to.click(function(){
 
 
 $from.val('Hôm nay là thứ mấy\r\nChắc chắn là thứ hight');
-$to.val($from.val());
+$to.val(tiegViet($from.val()));
 $from.focus();
 
 
