--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	
 	
-    <title>Tiếng Diệt</title>
+    <title>Tiếng Diệt aka Dietnamese</title>
 <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
