Disabe auto select on input

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ var copy = function(){
 	flash(1, "Đã copy");
 };
 $from.click(function(){
-	$from.select();
+	//$from.select();
 });
 $to.click(function(){
 	$to.select();
