Fix bug when cut data.

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ $from.on('input change', function(){
 	if ($auto.prop('checked')){
 		if (str)
 		setClipboard(str);
-		else
-		setClipboard(' ');
+		//else
+		//setClipboard(' ');
 	}
 	$from.focus();
 	
