--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         a
     }
     ;
-
 	var flash= function(type,content){
 		if($('#wrapperShowHide').length==0){
 			var wrapper = '<div id="wrapperShowHide" style="width: 300px;top:5%; left:69%;position: fixed;z-index:10000; font-size:13px"></div>';
@@ -87,7 +86,6 @@
 	var setClipboard= function(text){
 		var id = "mycustom-clipboard-textarea-hidden-id";
 		var existsTextarea = document.getElementById(id);
-
 		if(!existsTextarea){
 			console.log("Creating textarea");
 			var textarea = document.createElement("textarea");
@@ -96,20 +94,16 @@
 			textarea.style.position = 'fixed';
 			textarea.style.top = 0;
 			textarea.style.left = 0;
-
 			// Ensure it has a small width and height. Setting to 1px / 1em
 			// doesn't work as this gives a negative w/h on some browsers.
 			textarea.style.width = '1px';
 			textarea.style.height = '1px';
-
 			// We don't need padding, reducing the size if it does flash render.
 			textarea.style.padding = 0;
-
 			// Clean up any borders.
 			textarea.style.border = 'none';
 			textarea.style.outline = 'none';
 			textarea.style.boxShadow = 'none';
-
 			// Avoid flash of white box if rendered for any reason.
 			textarea.style.background = 'transparent';
 			document.querySelector("body").appendChild(textarea);
@@ -118,10 +112,8 @@
 		}else{
 			console.log("The textarea already exists :3")
 		}
-
 		existsTextarea.value = text;
 		existsTextarea.select();
-
 		try {
 			var status = document.execCommand('copy');
 			if(!status){
@@ -230,6 +222,25 @@ body {
 	</div>
 </div>
 
+<br>
+<br>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="jumbotron well">
+				<h2>
+					Tại sao lại có cái nầy
+				</h2>
+				<p>
+					Đây là bộ chữ tiếng diệt mới, vừa được một ông tiến sĩ đề xuất thay thế bộ chữ quốc ngữ hiện tại.</p>
+				<p>
+					<a class="btn btn-primary btn-large" href="https://thanhnien.vn/giao-duc/de-xuat-cai-cach-tieng-viet-nhung-nguoi-co-don-903929.html">Link bài báo</a>
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+
 <script>
 var $from = $('#exampleInputEmail1');
 var $to = $('#exampleInputPassword1');
@@ -257,24 +268,18 @@ $from.click(function(){
 $to.click(function(){
 	$to.select();
 });
-
-
 $from.val('Hôm nay là thứ mấy\r\nChắc chắn là thứ hight');
 $to.val(tiegViet($from.val()));
 $from.focus();
-
-
 </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-97811959-2', 'auto');
       ga('send', 'pageview');
     </script>
   
 </body>
 </html>
-
