--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ $from.click(function(){
 $to.click(function(){
 	$to.select();
 });
-$from.val('Hôm nay là thứ mấy\r\nChắc chắn là thứ hight');
+$from.val('Hôm nay là thứ mấy\r\nChắc chắn là thứ hight\r\n:))');
 $to.val(tiegViet($from.val()));
 $from.focus();
 </script>
